<resources>
    <string name="app_name">Wisata Sumbar</string>

    <string name="permission">Permission</string>
    <string name="check_permission">Check Permission</string>

    <string name="next">Next</string>
    <string name="discover">Discover</string>
    <string name="shop">Shop</string>
    <string name="offers">Offers</string>
    <string name="rewards">Rewards</string>

    <string name="discover_text">Look for things around you</string>
    <string name="shop_text"><![CDATA[Get the best deals & Coupons]]></string>
    <string name="offers_text">Find great offers while you discover</string>
    <string name="rewards_text"><![CDATA[Free recharge coupons & more]]></string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="articles">Article</string>
    <string name="account">Account</string>
    <string name="travel">Travel</string>

    <string name="search">Search</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
</resources>
